fix some spacing and change string concatenation to use <<

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .wrapper {
-  width: 50%;
+  width: 70%;
 }
 
 .index-wrapper {
@@ -17,7 +17,7 @@ body {
 }
 
 .redirect-wrapper {
-  padding: 40% 0;
+  padding: 30% 0;
   text-align: center;
   font-size: 2.2em;
 }
